[project]
name = "graphgeeks-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3",
    "gliner>=0.2",
    "gliner_spacy>=0.0",
    "glirel>=0.1",
    "icecream>=2.1",
    "ipywidgets>=8.1",
    "jupyterlab>=4.2",
    "jupyterlab_execute_time>=3.1",
    "lancedb>=0.11",
    "loguru>=0.7.3",
    "networkx>=3.3",
    "pip>=25.0.1",
    "pyinstrument>=4.6",
    "pyvis>=0.3",
    "requests>=2.32",
    "spacy>=3.7",
    "tqdm>=4.66",
    "watermark>=2.4",
]

[tool.taskipy.tasks]
download_model = "uv run spacy download en_core_web_md"